add song-list.js to load page base on given data

--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/list.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
+    <script src="../script/song-list.js" defer></script>
     <title>لیست آهنگ ها |‌ آهنگیفای</title>
   </head>
   <body>
@@ -71,43 +72,43 @@
           <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
         </div>
         <div>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/150" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/151" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=03">
+          <a class="music__section__item" href="./song.html?q=03">
             <img src="https://picsum.photos/152" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=04">
+          <a class="music__section__item" href="./song.html?q=04">
             <img src="https://picsum.photos/153" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=05">
+          <a class="music__section__item" href="./song.html?q=05">
             <img src="https://picsum.photos/154" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/155" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/156" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
@@ -121,43 +122,43 @@
           <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
         </div>
         <div>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/157" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/158" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=03">
+          <a class="music__section__item" href="./song.html?q=03">
             <img src="https://picsum.photos/159" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=04">
+          <a class="music__section__item" href="./song.html?q=04">
             <img src="https://picsum.photos/160" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=05">
+          <a class="music__section__item" href="./song.html?q=05">
             <img src="https://picsum.photos/161" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/162" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/163" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
@@ -171,43 +172,43 @@
           <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
         </div>
         <div>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/164" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/165" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=03">
+          <a class="music__section__item" href="./song.html?q=03">
             <img src="https://picsum.photos/166" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=04">
+          <a class="music__section__item" href="./song.html?q=04">
             <img src="https://picsum.photos/167" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=05">
+          <a class="music__section__item" href="./song.html?q=05">
             <img src="https://picsum.photos/168" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/169" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/170" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
@@ -221,43 +222,43 @@
           <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
         </div>
         <div>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/171" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/172" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=03">
+          <a class="music__section__item" href="./song.html?q=03">
             <img src="https://picsum.photos/173" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=04">
+          <a class="music__section__item" href="./song.html?q=04">
             <img src="https://picsum.photos/174" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=05">
+          <a class="music__section__item" href="./song.html?q=05">
             <img src="https://picsum.photos/175" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/176" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/177" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
@@ -271,43 +272,43 @@
           <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
         </div>
         <div>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/178" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/179" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=03">
+          <a class="music__section__item" href="./song.html?q=03">
             <img src="https://picsum.photos/180" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=04">
+          <a class="music__section__item" href="./song.html?q=04">
             <img src="https://picsum.photos/181" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=05">
+          <a class="music__section__item" href="./song.html?q=05">
             <img src="https://picsum.photos/182" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=01">
+          <a class="music__section__item" href="./song.html?q=01">
             <img src="https://picsum.photos/183" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
             <span class="music__section__duration">7:40</span>
           </a>
-          <a href="./song.html?q=02">
+          <a class="music__section__item" href="./song.html?q=02">
             <img src="https://picsum.photos/184" alt="song cover" />
             <span class="music__section__name">شب عشق</span>
             <span class="music__section__singer">خوانندگان انقلابی</span>
