--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../style/css/components/song-item.css" />
     <link rel="stylesheet" href="../style/css/components/audio.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
+    <script src="../script/song.js" defer></script>
   </head>
 
   <body>
@@ -240,6 +241,7 @@
       </section>
 
       <div class="audio">
+        <audio src=""></audio>
         <div class="audio__container">
           <div class="audio__volume">
             <button>
