add to play list event listener

--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -80,7 +80,7 @@
         <button class="button song__follow">دنبال کردن</button>
 
         <div class="song__actions">
-          <button class="button--icon" data-label="افزودن به علاقه مندی ها">
+          <button id="add-to-playlist" class="button--icon" data-label="افزودن به علاقه مندی ها">
             <svg>
               <use xlink:href="../assets/image/sprite.svg#heart" />
             </svg>
