--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -65,258 +65,24 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <template id="music__item__template">
+      <a class="music__section__item" href="">
+        <img src="" alt="song cover" />
+        <span class="music__section__name"></span>
+        <span class="music__section__singer"></span>
+        <span class="music__section__duration"></span>
+      </a>
+    </template>
+    <template id="music__section__template">
       <section class="music__section">
         <div>
-          <h2>آهنگ سنتی</h2>
-          <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
+          <h2></h2>
+          <a class="button--inline" href="">نمایش همه</a>
         </div>
-        <div>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/150" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/151" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=03">
-            <img src="https://picsum.photos/152" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=04">
-            <img src="https://picsum.photos/153" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=05">
-            <img src="https://picsum.photos/154" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/155" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/156" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-        </div>
+        <div class="music__section__container"></div>
       </section>
-      <section class="music__section">
-        <div>
-          <h2>آهنگ پاپ</h2>
-          <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
-        </div>
-        <div>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/157" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/158" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=03">
-            <img src="https://picsum.photos/159" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=04">
-            <img src="https://picsum.photos/160" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=05">
-            <img src="https://picsum.photos/161" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/162" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/163" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-        </div>
-      </section>
-      <section class="music__section">
-        <div>
-          <h2>آهنگ بیکلام</h2>
-          <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
-        </div>
-        <div>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/164" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/165" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=03">
-            <img src="https://picsum.photos/166" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=04">
-            <img src="https://picsum.photos/167" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=05">
-            <img src="https://picsum.photos/168" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/169" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/170" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-        </div>
-      </section>
-      <section class="music__section">
-        <div>
-          <h2>آهنگ راک</h2>
-          <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
-        </div>
-        <div>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/171" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/172" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=03">
-            <img src="https://picsum.photos/173" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=04">
-            <img src="https://picsum.photos/174" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=05">
-            <img src="https://picsum.photos/175" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/176" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/177" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-        </div>
-      </section>
-      <section class="music__section">
-        <div>
-          <h2>آهنگ رپ</h2>
-          <a class="button--inline" href="./song.html?q=all">نمایش همه</a>
-        </div>
-        <div>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/178" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/179" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=03">
-            <img src="https://picsum.photos/180" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=04">
-            <img src="https://picsum.photos/181" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=05">
-            <img src="https://picsum.photos/182" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=01">
-            <img src="https://picsum.photos/183" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-          <a class="music__section__item" href="./song.html?q=02">
-            <img src="https://picsum.photos/184" alt="song cover" />
-            <span class="music__section__name">شب عشق</span>
-            <span class="music__section__singer">خوانندگان انقلابی</span>
-            <span class="music__section__duration">7:40</span>
-          </a>
-        </div>
-      </section>
-    </main>
+    </template>
+    <main></main>
     <footer class="footer">
       <div class="footer__social">
         <a href="http://youtube.com">
