tried to commitment to clean code in every steps

--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
-    <link rel="stylesheet" href="../style/css/list.css" />
+    <link rel="stylesheet" href="../style/css/song-list.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
     <script src="../script/song-list.js" defer></script>
     <title>لیست آهنگ ها |‌ آهنگیفای</title>
