fix background problem in forms

--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ثبت نام | آهنگیفای</title>
-    <link rel="stylesheet" href="../style/css/main.css"></link>
-    <link rel="stylesheet" href="../style/css/form.css"></link>
-    <link rel="stylesheet" href="../style/css/components/button.css"></link>
-    <link rel="icon" href="../assets/image/logo-ahangify.png">
+    <link rel="stylesheet" href="../style/css/main.css" />
+    <link rel="stylesheet" href="../style/css/form.css" />
+    <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="icon" href="../assets/image/favicon.png" />
     <script src="../script/form.js" defer></script>
   </head>
   <body>
@@ -17,34 +17,52 @@
         <h3 class="form__subtitle">گذرگاه سرزمین رویا</h3>
 
         <div class="form__field">
-          <input id="email" type="email" class="form__field__input" autocomplete="email" />
+          <input
+            id="email"
+            type="email"
+            class="form__field__input"
+            autocomplete="email"
+          />
           <label
             for="email"
             class="form__field__label form__field__label--inline"
-          > ایمیل
+          >
+            ایمیل
           </label>
           <span class="form__field__status"></span>
         </div>
 
         <div class="form__field">
-          <input id="password" type="password" class="form__field__input" autocomplete="new-password" />
+          <input
+            id="password"
+            type="password"
+            class="form__field__input"
+            autocomplete="new-password"
+          />
           <label
             for="password"
             class="form__field__label form__field__label--inline"
-          > کلمه عبور
+          >
+            کلمه عبور
           </label>
           <span class="form__field__status"></span>
         </div>
 
         <div class="form__field">
-            <input id="repeat-password" type="password" class="form__field__input" autocomplete="new-password" />
-            <label
-              for="repeat-password"
-              class="form__field__label form__field__label--inline"
-            > تکرار کلمه عبور
-            </label>
-            <span class="form__field__status"></span>
-          </div>
+          <input
+            id="repeat-password"
+            type="password"
+            class="form__field__input"
+            autocomplete="new-password"
+          />
+          <label
+            for="repeat-password"
+            class="form__field__label form__field__label--inline"
+          >
+            تکرار کلمه عبور
+          </label>
+          <span class="form__field__status"></span>
+        </div>
 
         <a href="./login.html" class="button--inline">قبلا ثبت نام کردم...</a>
         <button type="submit" class="button">ثبت نام</button>
