add name to signup and make it responsive

--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -32,6 +32,40 @@
           <span class="form__field__status"></span>
         </div>
 
+        <div class="form__group">
+          <div class="form__field">
+            <input
+              id="firstname"
+              type="text"
+              class="form__field__input"
+              autocomplete="given-name"
+            />
+            <label
+              for="firstname"
+              class="form__field__label form__field__label--inline"
+            >
+              نام
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+
+          <div class="form__field">
+            <input
+              id="lastname"
+              type="text"
+              class="form__field__input"
+              autocomplete="family-name"
+            />
+            <label
+              for="lastname"
+              class="form__field__label form__field__label--inline"
+            >
+              نام خانوادگی
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+        </div>
+
         <div class="form__field">
           <input
             id="password"
