add loading to form

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -13,6 +13,8 @@
   <body>
     <main class="form__box">
       <form class="form">
+        <div class="form__progress"></div>
+
         <h1 class="form__title">ورود</h1>
         <h3 class="form__subtitle">گذرگاه سرزمین رویا</h3>
 
