fix lang=fa in htmls

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -69,11 +69,7 @@
     <template id="song-item">
       <li>
         <a href="./song.html" class="song__item">
-          <img
-            class="song__item__image"
-            src=""
-            alt=""
-          />
+          <img class="song__item__image" src="" alt="" />
           <div>
             <h3 class="song__item__name"></h3>
             <div class="song__item__singer"></div>
