--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl">
+<html lang="fa" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -80,7 +80,11 @@
         <button class="button song__follow">دنبال کردن</button>
 
         <div class="song__actions">
-          <button id="add-to-playlist" class="button--icon" data-label="افزودن به علاقه مندی ها">
+          <button
+            id="add-to-playlist"
+            class="button--icon"
+            data-label="افزودن به علاقه مندی ها"
+          >
             <svg>
               <use xlink:href="../assets/image/sprite.svg#heart" />
             </svg>
