fix icon type in htmls

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
-    <link rel="icon" href="../assets/image/favicon.png" />
+    <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/play-list.js" defer></script>
     <title>علاقه مندی هام |‌ آهنگیفای</title>
   </head>
