--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/components/song-item.css" />
     <link rel="stylesheet" href="../style/css/components/audio.css" />
-    <link rel="icon" href="../assets/image/favicon.png" />
+    <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/song.js" defer></script>
   </head>
 
