--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../style/css/components/header.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
-    <link rel="icon" href="../assets/image/favicon.png" />
+    <link rel="icon" href="../assets/image/favicon.ico" />
   </head>
   <body>
     <header class="header">
