--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/css/main.css"></link>
     <link rel="stylesheet" href="../style/css/form.css"></link>
     <link rel="stylesheet" href="../style/css/components/button.css"></link>
-    <link rel="icon" href="../assets/image/logo-ahangify.png">
+    <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/form.js" defer></script>
   </head>
   <body>
