--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/list.css" />
-    <link rel="icon" href="../assets/image/favicon.png" />
+    <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/song-list.js" defer></script>
     <title>لیست آهنگ ها |‌ آهنگیفای</title>
   </head>
