--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -31,7 +31,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
@@ -58,7 +58,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
