--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/css/form.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.png" />
+    <script src="../script/api/index.js"></script>
     <script src="../script/api/sign-up.js" defer></script>
     <script src="../script/form.js" defer></script>
   </head>
