add user name to nav bar

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/play-list.js" defer></script>
+    <script src="../script/nav.js" defer></script>
     <title>علاقه مندی هام |‌ آهنگیفای</title>
   </head>
 
@@ -19,13 +20,12 @@
     <nav class="nav">
       <ul class="nav__link__box">
         <li>
-          <a class="nav__link button--inline" href="./sign-up.html">
-            ثبت نام
+          <a class="nav__link--home nav__link" href="./index.html">
+            <img src="../assets/image/favicon.png" alt="آهنگیفای" />
+            <span class="button--inline">آهنگیفای</span>
           </a>
         </li>
-        <li>
-          <a class="nav__link button--inline" href="./login.html"> ورود </a>
-        </li>
+
         <li>
           <a class="nav__link button--inline" href="./song-list.html">
             آهنگ ها
@@ -35,6 +35,20 @@
           <a class="nav__link button--inline" href="./play-list.html">
             علاقه مندی ها
           </a>
+        </li>
+
+        <li class="nav__auth__box">
+          <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
+          <a class="nav__link button--inline" href="./login.html">ورود</a>
+        </li>
+
+        <li class="nav__user__box">
+          <a class="nav__user" href="./user.html">
+            <div class="nav__user__image">ع</div>
+            <div class="nav__user__name">علی سالمی</div>
+          </a>
+
+          <button class="nav__logout">خروج</button>
         </li>
       </ul>
 
@@ -46,9 +60,7 @@
       <div class="nav__menu__background"></div>
       <ul class="nav__menu">
         <li>
-          <a class="nav__link button--inline" href="./sign-up.html">
-            ثبت نام
-          </a>
+          <a class="nav__link button--inline" href="./sign-up.html">ثبت نام</a>
         </li>
         <li>
           <a class="nav__link button--inline" href="./login.html">ورود</a>
