--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -12,19 +12,19 @@
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/song-list.js" defer></script>
     <title>لیست آهنگ ها |‌ آهنگیفای</title>
+    <script src="../script/nav.js" defer></script>
   </head>
   <body>
     <header class="header">
       <nav class="nav">
         <ul class="nav__link__box">
           <li>
-            <a class="nav__link button--inline" href="./sign-up.html">
-              ثبت نام
+            <a class="nav__link--home nav__link" href="./index.html">
+              <img src="../assets/image/favicon.png" alt="آهنگیفای" />
+              <span class="button--inline">آهنگیفای</span>
             </a>
           </li>
-          <li>
-            <a class="nav__link button--inline" href="./login.html"> ورود </a>
-          </li>
+
           <li>
             <a class="nav__link button--inline" href="./song-list.html">
               آهنگ ها
@@ -34,6 +34,22 @@
             <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
+          </li>
+
+          <li class="nav__auth__box">
+            <a class="nav__link button--inline" href="./sign-up.html"
+              >ثبت نام</a
+            >
+            <a class="nav__link button--inline" href="./login.html">ورود</a>
+          </li>
+
+          <li class="nav__user__box">
+            <a class="nav__user" href="./user.html">
+              <div class="nav__user__image">ع</div>
+              <div class="nav__user__name">علی سالمی</div>
+            </a>
+
+            <button class="nav__logout">خروج</button>
           </li>
         </ul>
 
@@ -45,9 +61,9 @@
         <div class="nav__menu__background"></div>
         <ul class="nav__menu">
           <li>
-            <a class="nav__link button--inline" href="./sign-up.html">
-              ثبت نام
-            </a>
+            <a class="nav__link button--inline" href="./sign-up.html"
+              >ثبت نام</a
+            >
           </li>
           <li>
             <a class="nav__link button--inline" href="./login.html">ورود</a>
