--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/form.css" />
+    <link rel="stylesheet" href="../style/css/user.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script>
       const PROTECTED = true;
     </script>
     <script src="../script/api/index.js"></script>
     <script src="../script/api/auth.js"></script>
+    <script src="../script/form.js" defer></script>
   </head>
 
   <body>
@@ -63,6 +66,113 @@
         </li>
       </ul>
     </nav>
+
+    <main class="main">
+      <section>
+        <input type="file" name="avatar" id="avatar__input" />
+        <svg>
+          <use xlink:href="../assets/image/sprite.svg#user" />
+        </svg>
+        <div>
+          <div class="form__field">
+            <input id="name" type="text" class="form__field__input" />
+            <label
+              for="name"
+              class="form__field__label form__field__label--inline"
+            >
+              نام
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+          <div id="email-field" class="form__field">
+            <input id="last_name" type="text" class="form__field__input" />
+            <label
+              for="last_name"
+              class="form__field__label form__field__label--inline"
+            >
+              نام خانوادگی
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+        </div>
+        <a href="./index.html">
+          <img src="../assets/image/favicon.png" alt="logo" />
+        </a>
+      </section>
+      <section class="hidden__desktop">
+        <a href="./index.html">
+          <img src="../assets/image/favicon.png" alt="logo" />
+        </a>
+        <input type="file" name="avatar" id="avatar__input" />
+        <svg>
+          <use xlink:href="../assets/image/sprite.svg#user" />
+        </svg>
+        <div>
+          <div class="form__field">
+            <input id="name" type="text" class="form__field__input" />
+            <label
+              for="name"
+              class="form__field__label form__field__label--inline"
+            >
+              نام
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+          <div id="email-field" class="form__field">
+            <input id="last_name" type="text" class="form__field__input" />
+            <label
+              for="last_name"
+              class="form__field__label form__field__label--inline"
+            >
+              نام خانوادگی
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div>
+          <input type="radio" id="male" name="male" value="male" />
+          <label for="male">پسر</label>
+        </div>
+        <div>
+          <input type="radio" id="female" name="male" value="female" />
+          <label for="female">دختر</label>
+        </div>
+        <div>
+          <div class="form__field">
+            <input id="birthday" type="date" class="form__field__input" />
+            <label
+              for="birthday"
+              class="form__field__label form__field__label--inline"
+            >
+              تاریخ تولد
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+        </div>
+        <div>
+          <div id="password-field" class="form__field">
+            <input
+              id="password"
+              type="password"
+              class="form__field__input"
+              autocomplete="current-password"
+            />
+            <label
+              for="password"
+              class="form__field__label form__field__label--inline"
+            >
+              کلمه عبور
+            </label>
+            <span class="form__field__status"></span>
+          </div>
+        </div>
+      </section>
+      <section>
+        <button class="button">به روز رسانی</button>
+      </section>
+    </main>
 
     <footer class="footer">
       <div class="footer__social">
