Revert "fix not loading css"
This reverts commit 0327fe98ad7b785068c41dbdc91ee7af1111b128.

--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list.html">
+            <a class="nav__link button--inline" href="./play-list">
               علاقه مندی ها
             </a>
           </li>
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list.html">
+            <a class="nav__link button--inline" href="./play-list">
               علاقه مندی ها
             </a>
           </li>
