fix mistake instead of rename list.scss to song-list.scss we rename song.scss to song-list.scss

--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -33,7 +33,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li>
-            <a class="nav__link button--inline" href="./play-list">
+            <a class="nav__link button--inline" href="./play-list.html">
               علاقه مندی ها
             </a>
           </li>
