--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -15,6 +15,7 @@
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/api/index.js"></script>
     <script src="../script/api/auth.js"></script>
+    <script src="../script/api/song.js"></script>
     <script src="../script/nav.js" defer></script>
     <script src="../script/song.js" defer></script>
   </head>
@@ -89,12 +90,9 @@
           alt="song cover image"
         />
 
-        <h1 class="song__name">
-          مرداب
-          <small>پاپ</small>
-        </h1>
+        <h1 class="song__name"></h1>
 
-        <h3 class="song__singer">حسن شماعی زاده</h3>
+        <h3 class="song__singer"></h3>
         <button class="button song__follow">دنبال کردن</button>
 
         <div class="song__actions">
@@ -135,57 +133,7 @@
         </label>
       </div>
 
-      <ul class="song__lyrics">
-        <li>میون یه دشت لخت</li>
-        <li>زير خورشید کوير</li>
-        <li>مونده یک مرداب پیر</li>
-        <li>توی دست خاک اسیر</li>
-        <li>منم اون مرداب پیر</li>
-        <li>از همه دنیا جدا</li>
-        <li>داغ خورشید به تنم</li>
-        <li>زنجیر زمین به پام</li>
-        <li>من همونم که یه روز</li>
-        <li>می خواستم دريا بشم</li>
-        <li>می خواستم بزرگترين</li>
-        <li>دريای دنيا بشم</li>
-        <li>آرزو داشتم برم</li>
-        <li>تا به دريا برسم</li>
-        <li>شبو آتیش بزنم</li>
-        <li>تا به فردا برسم</li>
-        <li>اولش چشمه بودم</li>
-        <li>زير آسمون پیر</li>
-        <li>اما از بخت سیاه</li>
-        <li>راهم افتاد به کوير</li>
-        <li>چشم من</li>
-        <li>چشم من به اونجا بود</li>
-        <li>پشت اون کوه بلند</li>
-        <li>اما دست سرنوشت</li>
-        <li>سر رام یه چاله کند</li>
-        <li>توی چاله افتادم</li>
-        <li>خاک منو زندونی کرد</li>
-        <li>آسمونم نباريد</li>
-        <li>اونم سر گرونی کرد</li>
-        <li>حالا یه مرداب شدم</li>
-        <li>یه اسیر نیمه جون</li>
-        <li>یه طرف میرم به خاک</li>
-        <li>یه طرف به آسمون</li>
-        <li>خورشید از اون بالاها</li>
-        <li>زمینم از این پایین</li>
-        <li>هی بخارم می کنن</li>
-        <li>زندگیم شده همین</li>
-        <li>با چشام مردنمو</li>
-        <li>دارم اینجا میبینم</li>
-        <li>سر نوشتم همینه</li>
-        <li>من اسیر زمینم</li>
-        <li>هیچی باقی نیست ازم</li>
-        <li>قطره های آخره</li>
-        <li>خاك تشنه همینم</li>
-        <li>داره همراش میبره</li>
-        <li>خشک میشم تموم میشم</li>
-        <li>فردا که خورشید میاد</li>
-        <li>شن جامو پر میکنه</li>
-        <li>که میاره دست باد</li>
-      </ul>
+      <ul class="song__lyrics"></ul>
 
       <template id="suggestion">
         <li>
@@ -196,10 +144,10 @@
               alt="song 1"
             />
             <div>
-              <h3 class="song__item__name">محراب</h3>
-              <div class="song__item__singer">محمد اصفهانی</div>
+              <h3 class="song__item__name"></h3>
+              <div class="song__item__singer"></div>
             </div>
-            <div class="song__item__duration">3:51</div>
+            <div class="song__item__duration"></div>
           </a>
         </li>
       </template>
