--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>آهنگ | آهنگیفای</title>
+    <title>نمای کاربری | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
@@ -19,6 +19,7 @@
     <script src="../script/api/auth.js"></script>
     <script src="../script/form.js" defer></script>
     <script src="../script/nav.js" defer></script>
+    <script src="../script/user.js" defer></script>
   </head>
 
   <body>
@@ -84,92 +85,83 @@
     </nav>
 
     <main class="main">
-      <section>
-        <input type="file" name="avatar" id="avatar__input" />
-        <svg>
-          <use xlink:href="../assets/image/sprite.svg#user" />
-        </svg>
-        <div>
+      <form class="form__update" novalidate>
+        <section class="form__update__container">
+          <label
+            class="form__update__container--user-image"
+            for="avatar__input"
+          >
+            <img id="avatar" src="../assets/image/user.svg" alt="user image" />
+          </label>
+          <input
+            type="file"
+            name="avatar"
+            id="avatar__input"
+            accept=".jpg, .jpeg, .png"
+          />
+          <div class="form__update__container--input">
+            <div class="form__field">
+              <input
+                id="name"
+                name="first_name"
+                type="text"
+                class="form__field__input"
+              />
+              <label
+                for="name"
+                class="form__field__label form__field__label--inline"
+              >
+                نام
+              </label>
+              <span class="form__field__status"></span>
+            </div>
+            <div id="email-field" class="form__field">
+              <input
+                id="last_name"
+                name="last_name"
+                type="text"
+                class="form__field__input"
+              />
+              <label
+                for="last_name"
+                class="form__field__label form__field__label--inline"
+              >
+                نام خانوادگی
+              </label>
+              <span class="form__field__status"></span>
+            </div>
+          </div>
+        </section>
+        <section class="form__update__container">
+          <div class="form__update__container--radio">
+            <input type="radio" id="male" name="gender" value="true" />
+            <label for="male">پسر</label>
+          </div>
+          <div class="form__update__container--radio">
+            <input type="radio" id="female" name="gender" value="false" />
+            <label for="female">دختر</label>
+          </div>
           <div class="form__field">
-            <input id="name" type="text" class="form__field__input" />
-            <label
-              for="name"
-              class="form__field__label form__field__label--inline"
-            >
-              نام
-            </label>
-            <span class="form__field__status"></span>
-          </div>
-          <div id="email-field" class="form__field">
-            <input id="last_name" type="text" class="form__field__input" />
-            <label
-              for="last_name"
-              class="form__field__label form__field__label--inline"
-            >
-              نام خانوادگی
-            </label>
-            <span class="form__field__status"></span>
-          </div>
-        </div>
-        <a href="./index.html">
-          <img src="../assets/image/favicon.png" alt="logo" />
-        </a>
-      </section>
-      <section class="hidden__desktop">
-        <a href="./index.html">
-          <img src="../assets/image/favicon.png" alt="logo" />
-        </a>
-        <input type="file" name="avatar" id="avatar__input" />
-        <svg>
-          <use xlink:href="../assets/image/sprite.svg#user" />
-        </svg>
-        <div>
-          <div class="form__field">
-            <input id="name" type="text" class="form__field__input" />
-            <label
-              for="name"
-              class="form__field__label form__field__label--inline"
-            >
-              نام
-            </label>
-            <span class="form__field__status"></span>
-          </div>
-          <div id="email-field" class="form__field">
-            <input id="last_name" type="text" class="form__field__input" />
-            <label
-              for="last_name"
-              class="form__field__label form__field__label--inline"
-            >
-              نام خانوادگی
-            </label>
-            <span class="form__field__status"></span>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div>
-          <input type="radio" id="male" name="male" value="male" />
-          <label for="male">پسر</label>
-        </div>
-        <div>
-          <input type="radio" id="female" name="male" value="female" />
-          <label for="female">دختر</label>
-        </div>
-        <div>
-          <div class="form__field">
-            <input id="birthday" type="date" class="form__field__input" />
+            <input
+              id="birthday"
+              name="birthday"
+              type="date"
+              class="form__field__input"
+            />
             <label
               for="birthday"
+              ,
+              id="label_birthday"
+              ,
               class="form__field__label form__field__label--inline"
             >
               تاریخ تولد
             </label>
             <span class="form__field__status"></span>
           </div>
-        </div>
-        <div>
           <div id="password-field" class="form__field">
             <input
+              name="new_password"
               id="password"
               type="password"
               class="form__field__input"
@@ -183,11 +175,11 @@
             </label>
             <span class="form__field__status"></span>
           </div>
-        </div>
-      </section>
-      <section>
-        <button class="button">به روز رسانی</button>
-      </section>
+        </section>
+        <section class="form__update__container">
+          <button id="submit" class="button">به روز رسانی</button>
+        </section>
+      </form>
     </main>
 
     <footer class="footer">
