refactore login and signup

--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/api/index.js"></script>
-    <script src="../script/api/sign-up.js" defer></script>
+    <script src="../script/api/sign-up.js"></script>
+    <script src="../script/sign-up.js" defer></script>
     <script src="../script/form.js" defer></script>
   </head>
   <body>
