--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/api/index.js"></script>
-    <script src="../script/api/login.js" defer></script>
+    <script src="../script/api/login.js"></script>
+    <script src="../script/login.js" defer></script>
     <script src="../script/form.js" defer></script>
   </head>
   <body>
