--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -84,11 +84,7 @@
 
     <main class="song__container">
       <section class="song__info">
-        <img
-          class="song__image"
-          src="https://picsum.photos/200"
-          alt="song cover image"
-        />
+        <img class="song__image" src="" alt="عکس آهنگ" />
 
         <h1 class="song__name"></h1>
 
@@ -138,11 +134,7 @@
       <template id="suggestion">
         <li>
           <a href="./song.html?id=1" class="song__item">
-            <img
-              class="song__item__image"
-              src="https://picsum.photos/100"
-              alt="song 1"
-            />
+            <img class="song__item__image" src="" alt="آهنگ پیشنهادی" />
             <div>
               <h3 class="song__item__name"></h3>
               <div class="song__item__singer"></div>
@@ -207,7 +199,7 @@
             </button>
           </div>
           <div class="audio__info">
-            <img src="https://picsum.photos/110" alt="cover song" />
+            <img src="" alt="عکس آهنگ" />
             <input type="checkbox" id="checkbox-add-to-playlist" />
             <label for="checkbox-add-to-playlist">
               <svg>
